welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:21: error: ';' expected but 'def' found.
}def faireMotif() {
 ^